<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="#B0E0E6"
    android:columnCount="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:text="@string/time"
            android:textColor="@android:color/black"
            android:textSize="16sp"></TextView>

        <EditText
            android:id="@+id/etTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:digits="0123456789"
            android:hint="@string/hintTime"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="8dp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:text="@string/rate"
            android:textColor="@android:color/black"
            android:textSize="16sp"></TextView>

        <EditText
            android:id="@+id/etRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:digits="0123456789"
            android:hint="@string/hintRate"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="8dp">

        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:text="@string/income"
            android:textColor="@android:color/black"
            android:textSize="16sp"></TextView>

        <EditText
            android:id="@+id/etIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:digits="0123456789"
            android:hint="@string/hintAdditional"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="8dp">

        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/add">

    </Button>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#87CEEB">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="#B0E0E6">
        </ListView>

    </LinearLayout>
</GridLayout>