<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:text="@string/time"
            android:textColor="@android:color/black"
            android:textSize="16sp"></TextView>

        <EditText
            android:id="@+id/etTimeEditor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:digits="0123456789"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="8dp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:text="@string/rate"
            android:textColor="@android:color/black"
            android:textSize="16sp"></TextView>

        <EditText
            android:id="@+id/etRateEditor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:digits="0123456789"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="8dp">

        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:text="@string/incomeEditor"
            android:textColor="@android:color/black"
            android:textSize="16sp"></TextView>

        <EditText
            android:id="@+id/etIncomeEditor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:digits="0123456789"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="8dp">

        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/edit">

    </Button>

</LinearLayout>